Term website with video

--- a/term-website-project/adventure-tours.html
+++ b/term-website-project/adventure-tours.html
@@ -134,7 +134,7 @@
             <br>
         </aside>
 
-        <p class="footer-bar">&copy;2018 All Rights Reserved | The Mountain Spoke | <a href="https://www.contractology.com/free-website-terms-and-conditions.html">Terms of Use</a> | <a href="references.docx">References</a> | <span id='date'></span>
+        <p class="footer-bar">&copy;2018 All Rights Reserved | The Mountain Spoke | <a href="https://www.youtube.com/watch?v=BwVBjO7ARxE&feature=youtu.be&hd=1">Video Overview</a> | <a href="references.docx">References</a> | <span id='date'></span>
         </p>
 
     </footer>
